# polymarket-copy-trading

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  test_trade.py
deploy/: copytrade.service  deploy.sh  env.example  setup.sh
src/: app.py  pipeline.py
src/dashboard/: server.py  template.py
src/executor/: clob_wrapper.py  trade_executor.py
src/market/: cache.py  resolver.py
src/models/: __init__.py  events.py  market.py  signals.py  trades.py
src/monitor/: blockchain.py  event_parser.py
src/notifier/: telegram.py
src/persistence/: database.py  repository.py
src/risk/: circuit_breaker.py  manager.py
src/signal/: confluence.py  fill_accumulator.py  filter.py  generator.py  whale_activity_tracker.py  whale_profiler.py
tests/: conftest.py  test_circuit_breaker.py  test_confluence.py  test_database.py  test_e2e.py  test_event_parser.py  test_fill_accumulator.py  test_market_resolver.py  test_pipeline.py  test_risk_manager.py  test_signal_generator.py  test_trade_executor.py  test_trade_filter.py  test_whale_activity.py  test_whale_profiler.py
